# qc_file_parsers

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  xyzerrors.rs
src/array_text/: mod.rs
src/format_string/: frmtstngerror.rs  mod.rs
src/xyz/: mod.rs  xyzerrors.rs
src/xyz/xyzline/: numeric.rs  symbol.rs
src/xyzline/: mod.rs  numeric.rs  symbol.rs
tests/: file_setup.rs  integration_test.rs  test_allene_symbolic.xyz
