[package]
name = "qc_file_parsers"
version = "3.1.0"
edition = "2021"
license = "MIT"
description = "A crate providing libraries for parsing file formats used in computation chemistry."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
num = "0.4.1"
